refactor: simplify and modernize code with improved syntax and structure
- Replaced redundant type arguments, added `final` modifiers for immutability.
- Streamlined switch-case statements and casting using pattern matching.
- Enhanced string operations with `StringBuilder` chaining.
- Improved null-safety and error handling.