@@ -38,16 +38,12 @@ class AstPrinter implements Expr.Visitor<String>, Stmt.Visitor<String> {
     private void transform(StringBuilder builder, Object... parts) {
         for (Object part : parts) {
             builder.append(" ");
-            if (part instanceof Expr) {
-                builder.append(((Expr) part).accept(this));
-            } else if (part instanceof Stmt) {
-                builder.append(((Stmt) part).accept(this));
-            } else if (part instanceof Token) {
-                builder.append(((Token) part).lexeme);
-            } else if (part instanceof List) {
-                transform(builder, ((List<?>) part).toArray());
-            } else {
-                builder.append(part);
+            switch (part) {
+                case Expr expr -> builder.append(expr.accept(this));
+                case Stmt stmt -> builder.append(stmt.accept(this));
+                case Token token -> builder.append(token.lexeme);
+                case List<?> list -> transform(builder, list.toArray());
+                case null, default -> builder.append(part);
             }
         }
     }
@@ -116,10 +112,10 @@ class AstPrinter implements Expr.Visitor<String>, Stmt.Visitor<String> {
     @Override
     public String visitClassStmt(Stmt.Class stmt) {
         StringBuilder builder = new StringBuilder();
-        builder.append("(class" + stmt.name.lexeme);
+        builder.append("(class").append(stmt.name.lexeme);
 
         for (Stmt.Function method : stmt.methods) {
-            builder.append(" < " + print(method));
+            builder.append(" < ").append(print(method));
         }
 
         builder.append(")");
@@ -143,10 +139,10 @@ class AstPrinter implements Expr.Visitor<String>, Stmt.Visitor<String> {
     @Override
     public String visitFunctionStmt(Stmt.Function stmt) {
         StringBuilder builder = new StringBuilder();
-        builder.append("(fun " + stmt.name.lexeme + "(");
+        builder.append("(fun ").append(stmt.name.lexeme).append("(");
 
         for (Token param : stmt.params) {
-            if (param != stmt.params.get(0))
+            if (param != stmt.params.getFirst())
                 builder.append(" ");
             builder.append(param.lexeme);
         }
